--- a/app/src/main/res/layout/activity_mentor_add_edit.xml
+++ b/app/src/main/res/layout/activity_mentor_add_edit.xml
@@ -73,6 +73,7 @@
         android:paddingRight="50dip">
         <Button
             android:id="@+id/savebutton"
+            android:visibility="invisible"
             android:layout_marginTop="20dp"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
