--- a/app/src/main/res/layout/term_row.xml
+++ b/app/src/main/res/layout/term_row.xml
@@ -22,10 +22,24 @@
         android:textSize="20sp"/>
 
     <TextView
+        android:id="@+id/textView_spacer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" - "
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/textView_startdate"
+        android:layout_below="@id/textView_title"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="10dp"
+        android:textSize="20sp" />
+
+    <TextView
         android:id="@+id/textView_enddate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/textView_startdate"
+        android:layout_below="@id/textView_title"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/textView_spacer"
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="10dp"
         android:textSize="20sp"/>
