--- a/app/src/main/res/layout/activity_term_add_edit.xml
+++ b/app/src/main/res/layout/activity_term_add_edit.xml
@@ -71,15 +71,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_gravity="bottom"
-        android:paddingLeft="50dip"
+        android:orientation="horizontal"
+        android:paddingLeft="30dip"
         android:paddingRight="50dip">
+
+        <TextView
+            android:layout_width="0dip"
+            android:layout_height="30dip"
+            android:layout_weight="0.2"
+            android:gravity="bottom|right"
+            android:text="Courses:" />
+
         <ListView
             android:id="@+id/contentlist"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="8dp" />
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:layout_weight="0.7"
+            android:divider="@android:color/transparent" />
     </LinearLayout>
 
     <LinearLayout
