--- a/app/src/main/res/menu/edit.xml
+++ b/app/src/main/res/menu/edit.xml
@@ -2,9 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_edit"
-        android:icon="@android:drawable/ic_menu_edit"
+        android:id="@+id/action_save"
+        android:icon="@android:drawable/ic_menu_save"
         app:showAsAction="ifRoom"
-        android:title="Edit">
+        android:title="Save">
+    </item>
+    <item
+        android:id="@+id/action_delete"
+        android:icon="@android:drawable/ic_delete"
+        app:showAsAction="ifRoom"
+        android:title="Delete">
     </item>
 </menu>
