--- a/app/src/main/res/menu/save.xml
+++ b/app/src/main/res/menu/save.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_delete"
-        android:icon="@android:drawable/ic_delete"
+        android:id="@+id/action_save"
+        android:icon="@android:drawable/ic_menu_save"
         app:showAsAction="ifRoom"
-        android:title="Delete">
+        android:title="Save">
     </item>
 </menu>
